# ruby-jewelry-pos

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
catalogs/: admin.py  models.py  serializers.py  urls.py  views.py
catalogs/fixtures/: sample_catalogs.json
catalogs/migrations/: 0001_initial.py  0002_paymentmethod_is_cash.py  0003_productcategory_image_productsubcategory_image.py
config/: settings.py  urls.py
contacts/: admin.py  models.py  serializers.py  urls.py  views.py
contacts/fixtures/: walkin_customer.json
contacts/migrations/: 0001_initial.py  0002_customer_document_type.py
core/: models.py  permissions.py  views.py
dashboard/: services.py  urls.py  views.py
finance/: admin.py  models.py  serializers.py  urls.py  views.py
finance/migrations/: 0001_initial.py
import_templates/: plantilla_inventario_inicial.xlsx
integrations/: admin.py  models.py  services.py
integrations/migrations/: 0001_initial.py
inventory/: admin.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
inventory/management/commands/: generate_import_template.py
inventory/migrations/: 0001_initial.py  0002_product_image.py
pos/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
pos/migrations/: 0001_initial.py  0002_sale_seller_draftsale_draftsaleline.py  0003_closingpin_processdate_cashregistersession_and_more.py  0004_inventoryexit_unit_cost_snapshot.py  0005_documentseries_sale_is_voided_saledocument.py  0006_adminpin_delete_closingpin_and_more.py
