[project]
name = "ruby-jewelry-pos"
version = "0.1.0"
description = "Joyeria Ruby ERP/POS backend (Django + DRF API)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "openpyxl>=3.1.5",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
    "requests>=2.34.2",
]
